@@ -19,7 +19,6 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
 
@@ -77,7 +76,7 @@ public class RestTemplateTestController {
             // 动态设置响应类型，根据前台传递文件类型设置响应类型
             response.setContentType(request.getSession().getServletContext().getMimeType(extendFileName));
             // 设置响应头,attachment表示以附件的形式下载，inline表示在线打开
-            response.setHeader("content-disposition","attachment;fileName=" + URLEncoder.encode(filename, StandardCharsets.UTF_8));
+            response.setHeader("content-disposition","attachment;fileName=" + URLEncoder.encode(filename, "utf-8"));
             // 获取输出流对象（用于写文件）
             OutputStream os = response.getOutputStream();
             // 下载文件,使用spring框架中的FileCopyUtils工具
